# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
exclude = ["panda-cli"]
members = [
    "common",
    "expr",
    "sql",
    "core",
    "storage"
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
readme = "README.md"
authors = ["HetuDB <dev@panda.hetudb.com>"]
license = "Apache-2.0"
homepage = "https://github.com/hetudb/panda"
repository = "https://github.com/hetudb/panda"
rust-version = "1.64"

[workspace.dependencies]
arrow = { version = "43.0.0", features = ["prettyprint", "dyn_cmp_dict"] }
arrow-flight = { version = "43.0.0", features = ["flight-sql-experimental"] }
arrow-buffer = { version = "43.0.0", default-features = false }
arrow-schema = { version = "43.0.0", default-features = false }
arrow-array = { version = "43.0.0", default-features = false, features = ["chrono-tz"] }
parquet = { version = "43.0.0", features = ["arrow", "async", "object_store"] }
sqlparser = { version = "0.35", features = ["visitor"] }

[profile.release]
codegen-units = 1
lto = true

# the release profile takes a long time to build so we can use this profile during development to save time
# cargo build --profile release-nonlto
[profile.release-nonlto]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
inherits = "release"
lto = false
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false
